@@ -4,6 +4,10 @@ Changelog
 3.2 - Unreleased
 ----------------
 
+- Fixed the form_tabbing to use the correct buttons names. Closes
+  http://dev.plone.org/plone/ticket/7559
+  [lucie, calvinhp]
+
 - Fixed the full_review_list select all link to only select the items shown
   and not all of the items at the portal root. This closes:
   http://dev.plone.org/plone/ticket/6991
